--- a/configs/LOLv1.yml
+++ b/configs/LOLv1.yml
@@ -1,7 +1,7 @@
 data:
     type: "LLdataset"
-    train_dataset: "LOLv1"
-    val_dataset: "LOLv1"
+    train_dataset: "puwell"
+    val_dataset: "puwell"
     patch_size: 256
     channels: 3
     num_workers: 4
