--- a/configs/LOLv1.yml
+++ b/configs/LOLv1.yml
@@ -5,7 +5,8 @@ data:
     patch_size: 256
     channels: 3
     num_workers: 4
-    data_dir: "/kaggle/input/cyclegan-synthetic-data/pytorch-CycleGAN-and-pix2pix/results/puwell/test_latest/images/"
+    # data_dir: "/kaggle/input/cyclegan-synthetic-data/pytorch-CycleGAN-and-pix2pix/results/puwell/test_latest/images/"
+    data_dir: "/kaggle/input/puwell-test/Puwell_Test/"
     ckpt_dir: "ckpt/"
     conditional: True
 
